2002-02-16  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Remove html.
	(CLEANFILES):  Replace kawa_toc.html->kawa/*.html.  Add internals.html.
	(kawa.html):  Remove obsolete rule.
	* kawa.man:  Update documentation directory to /usr/share/doc.

	* kawa.texi (Scripts):  New node.

	* kawa.texi (Format):  Return value of format changed.

2002-02-15  Per Bothner  <per@bothner.com>

	* kawa.texi:  Fix various typos and minor errors.
	(Loading a ModuleBody):  Renamed to ...
	(Loading Java functions into Scheme):  Re-written and expanded.

	* Makefile.am (internals.html):  Use xsltproc.
	(EXTRA_DIST):  DOn't include generated html or postscript.
	(../kawa-doc-$(VERSION).tar.gz):  New rules, for latter files.

2002-02-13  Per Bothner  <per@bothner.com>

	* kawa.texi:  Update kawa*-compiled.jar to kawa*.jar.

2002-01-31  Per Bothner  <per@bothner.com>

	* kawa.texi (Multiple values): Document values-append.

	* kawa.texi (Server-side scripts, Servlets, CGI scripts,
	HTTP requests, HTTP response):  New sections.

2002-01-29  Per Bothner  <per@bothner.com>

	* kawa.texi (Options):  Document --krl and --brl.
	(KRL):  New chapter.

	* Makefile.am ($(KAWA_HTMLS)):  Use makeinfo --html, not texi2html.

2002-01-19  Per Bothner  <per@bothner.com>

	* kawa.texi:  Move some nodes into new Input-Output chapter.
	Document --output-format switch; new Named output formats node.

2001-11-27  Per Bothner  <per@bothner.com>

	* kawa.texi:  Note environment problem and fix from Jim White
	when running Ant under MS-Windows.

	* kawa.texi:  Mentioned new kawa-VERSION-src.zip.

2001-11-26  Per Bothner  <per@bothner.com>

	* kawa.texi (Binary distribution):  Remove note about windows console.

	* kawa.texi:  Merge in Ant instructions from Jim White.

	* kawa.texi (Standard Types):  Update note on <String>.

2001-11-24  Per Bothner  <per@bothner.com>

	* kawa.texi:  Document using Ant.  Remove makekawa.bat documentation.

2001-11-12  Per Bothner  <per@bothner.com>
